# beavers

./: .gitignore  LICENSE  README.md  pyproject.toml
beavers-python/: .gitignore  enviroment.py  main.py  pyproject.toml  quick_notes.md  run.py
beavers-python/cli/: main.py  pyproject.toml
beavers-python/experiments/scratchpad/: pyproject.toml
beavers-python/lib/core/: pyproject.toml
beavers-python/lib/core/src/core/: __init__.py  agent.py  dqn.py  runner.py
beavers-python/lib/core/src/core/agent/: __init__.py  action.py  agent.py  dqn.py  exceptions.py  experience.py  reward.py
beavers-python/lib/core/src/core/environment/: __init__.py  env_types.py  gridworld.py  gridworld_helpers.py  observation.py
beavers-python/lib/core/src/core/environment/gridworld/: __init__.py  grid.py  gridworld.py  observation.py
beavers-python/lib/core/src/core/orchestrator/: __init__.py  config.py  orchestrator.py
beavers-python/lib/core/src/core/terrain/: tile.py
beavers-python/lib/core/src/core/train/: train.py
beavers-python/lib/enviroments/gridworld/src/gridworld/: enviroment.py
beavers-python/lib/environment/gridworld/: pyproject.toml
beavers-python/lib/environment/gridworld/src/gridworld/: __init__.py  environment.py
beavers-python/lib/render/: pyproject.toml
beavers-python/lib/render/src/render/: __init__.py  tui.py
beavers-python/lib/render/src/render/pygame/: render.py
beavers-python/lib/sim/: pyproject.toml
beavers-python/lib/sim/src/sim/: __init__.py  simulate.py
beavers-python/scripts/: helpers.sh
docs/: PLAN.md  behaviour_modelling.md
experiments/: .gitignore
river/env/: river.py
rs/: Cargo.toml  README.md
rs/assets/models/beaver/: Beaver_LOD0.glb  Beaver_LOD1.glb  Beaver_LOD2.glb  Beaver_LOD3.glb  beaver_animations.glb
rs/assets/models/beaver/Animations/Single/: Beaver_Clicked.glb  Beaver_Idle_B.glb  Beaver_Jump.glb  Beaver_Run.glb  Beaver_Spin.glb
rs/castor-cli/: Cargo.toml  README.md
rs/castor-cli/assets/: ._tiles.ron  tiles.ron
rs/castor-cli/assets/models/beaver/Animations/Single/: Beaver_Attack.glb  Beaver_Bounce.glb  Beaver_Death.glb  Beaver_Eat.glb  Beaver_Fear.glb  Beaver_Fly.glb  Beaver_Hit.glb  Beaver_Idle_A.glb  Beaver_Idle_C.glb  Beaver_Roll.glb  Beaver_Sit.glb  Beaver_Swim.glb  Beaver_Walk.glb
rs/castor-cli/assets/models/beaver/Merged LOD/: Beaver_LOD_All.glb
rs/castor-cli/src/: camera.rs  main.rs
rs/castor-cli/src/beaver/: actions.rs  animation.rs  mod.rs
rs/castor-cli/src/board/: mod.rs  tile.rs
rs/castor-cli/src/terrain/: generation.rs  mod.rs  tiles.rs
rs/castor-core/: Cargo.toml
rs/castor-enviroments/: Cargo.toml
rs/crates/: README.md
rs/scripts/: tile_splitter.py
rs/src/: diag.rs  main.rs
rs/src/beaver/: actions.rs  animation.rs  mod.rs  movement.rs
rs/src/board/: assets.rs  mod.rs  tiles.rs
rs/src/board/decor/: mod.rs
rs/src/board/terrain_generation/: mod.rs  voronoi.rs
