[workspace]
members = [ "castor-cli","castor-core"
, "castor-enviroments"]
resolver = "2"


[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Tom French"]


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

