[package]
name = "beavrs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["shader_format_glsl", "bevy_dev_tools"]}
rand = "0.9.2"
rand_chacha = "0.9.0"

[target.wasm32-unknown-unknown.dependencies]
bevy = { version = "0.17.2", features = ["webgpu","web", "web_asset_cache"]}
