[package]
name = "castor-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
bevy_common_assets = { version = "0.14.0", features = ["ron"] }
bevy_ecs_tilemap = "0.17.0"
event-listener = "5.4.1"
futures-lite = "2.6.1"
serde = "1.0.228"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

