[project]
name = "gridworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom French", email = "thomas.harry.french@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
